[package]
name = "sanctum-driver"
version = "0.0.1"
edition = "2021"
authors = ["Flux Sec <fluxsec@proton.me>"]

[lib]
crate-type = ["cdylib"]
test = false

[package.metadata.wdk]

[profile.dev]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations

[profile.release]
panic = "abort"
lto = true # optional setting to enable Link Time Optimizations

[build]
target-dir = "target"

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"

[build-dependencies]
wdk-build = "0.2.0"

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]