[package]
name = "sanctum-driver"
version = "0.0.1"
edition = "2021"
authors = ["Flux Sec <fluxsec@proton.me>"]

[lib]
crate-type = ["cdylib"]
test = false

[package.metadata.wdk]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
wdk = { version = "0.2.0", features = [] }
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"

[build-dependencies]
wdk-build = "0.2.0"

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]